lib_LIBRARIES=liblion.a
liblion_a_SOURCES=lion.c sockets.c connections.c io.c zlib.c base64.c file.c \
				  pipe.c misc.c lgroup.c udp.c lfnmatch.c timers.c \
				  base64.h lfnmatch.h lion_rcsid.h pipe.h tls.h connections.h \
				  lgroup.h lion_types.h sockets.h udp.h io.h lion.h misc.h \
				  timers.h zlib.h snprintf.c tls.c
include_HEADERS=lion.h misc.h lion_types.h lion_rcsid.h timers.h


EXTRA_DIST=file_win32.c pipe_win32.c snprintf.c
